[package]
name = "rust-monkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 懒加载全局变量
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
fnv = " 1.0.3 "
paste = "1.0.14"
once_cell = "1.18.0"